--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="belize">
-                <h2>Belize</h2>
+                 <h1>Hello!</h1>
+		 <h2>Belize</h2>
             </div>
 
             <div class="destination" id="barcelona">
